--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
 asyncpg==0.29.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 databases==0.9.0
 exceptiongroup==1.2.2
@@ -17,10 +19,12 @@ pydantic_core==2.23.4
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.2
+requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.5
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
