--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,12 @@ anyio==4.4.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.1
 databases==0.9.0
+ecdsa==0.19.0
 exceptiongroup==1.2.2
 fastapi==0.115.0
 greenlet==3.1.1
@@ -13,13 +16,19 @@ h11==0.14.0
 httptools==0.6.1
 idna==3.10
 Jinja2==3.1.4
+jose==1.0.0
 MarkupSafe==2.1.5
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.2
 requests==2.32.3
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.5
